--- a/rnlmc2016.html
+++ b/rnlmc2016.html
@@ -70,7 +70,7 @@
   <p class="card-text">DEC (2000):  -71 39 52.71</p>
   <p class="card-text">V (mag): MagnitudeV</p>
   
-      <a href="http://simbad.harvard.edu/simbad/sim-id?Ident=Nom2&NbIdent=1&Radius=2&Radius.unit=arcmin&submit=submit+id" class="btn btn-secondary">SIMBAD</a>
+      <a href="" class="btn btn-secondary">SIMBAD</a>
   </div>
   </div>
 </div><div class="col-sm-6">
@@ -130,10 +130,7 @@
   <!-- Footer --><br><br><br>
 <footer class="page-footer font-small blue">
 
-  <!-- Copyright -->
-  <div class="footer-copyright text-center py-3 navbar-dark bg-dark" style="color:white">© 2022 Copyright: ARAS Group, Design & Functionality: Jaroslav Merc
-  </div>
-  <!-- Copyright -->
+
 
 </footer>
 <!-- Footer -->
