--- a/observers.html
+++ b/observers.html
@@ -359,7 +359,7 @@
       <td></td>
     </tr>
       <td>IBR</td>
-      <td>Ibrahima Diarrasouba</td>
+      <td>Ibrahima Diarrassouba</td>
       <td>France</td>
       <td>idiarrass@yahoo.com</td>
       <td></td>
