--- a/novae.html
+++ b/novae.html
@@ -71,7 +71,7 @@
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
 <p class="card-text">Number of stars: 73
 </p><p class="card-text">Number of spectra: 4407
-</p><p class="card-text">Last update: 2024-08-12, 20:27</p>
+</p><p class="card-text">Last update: 2024-08-12, 21:14</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -884,6 +884,28 @@
       <td>2024-07-30</td>
       <td>2024-08-12</td>
       <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2024-08-12 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+    </tr>
+    <tr>
+      <td><a href="novavul2024.html">Nova Vul 2024</a></td>
+      <td>19 43 07.51</td>
+      <td>+21 00 20.4</td>
+      <td></td>
+      <td>PNV J19430751+2100204</td>
+      <td>39</td>
+      <td>2024-07-30</td>
+      <td>2024-08-12</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2024-08-12 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+    </tr>
+    <tr>
+      <td><a href="rnlmc2016.html">RN LMC 2016</a></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td>4</td>
+      <td>2024-08-08</td>
+      <td>2024-08-11</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2024-08-11 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
     </tr>
     <tr>
       <td><a href="rnlmc2016.html">RN LMC 2016</a></td>
