--- a/novae.html
+++ b/novae.html
@@ -71,7 +71,7 @@
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
 <p class="card-text">Number of stars: 70
 </p><p class="card-text">Number of spectra: 4437
-</p><p class="card-text">Last update: 2024-10-24, 08:58</p>
+</p><p class="card-text">Last update: 2024-10-25, 07:24</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -875,7 +875,7 @@
       <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2024-08-12 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
     </tr>
     <tr>
-      <td>--</td>
+      <td><a href="rnovasco2024c.html">Nova Sco 2024c</a></td>
       <td>17 06 46.45</td>
       <td>-35 28 07.9</td>
       <td>V1725 Sco</td>
