--- a/novae.html
+++ b/novae.html
@@ -875,7 +875,7 @@
       <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2024-08-12 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
     </tr>
     <tr>
-      <td><a href="rnovasco2024c.html">Nova Sco 2024c</a></td>
+      <td><a href="novasco2024c.html">Nova Sco 2024c</a></td>
       <td>17 06 46.45</td>
       <td>-35 28 07.9</td>
       <td>V1725 Sco</td>
