--- a/symbiotics.html
+++ b/symbiotics.html
@@ -72,9 +72,9 @@
       <div class="card-body">
  <p class="card-text">Details on stars:   <a href="http://astronomy.science.upjs.sk/symbiotics/">New Online Database of Symbiotic Variables</a></p>
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
-<p class="card-text">Number of stars: 116
-</p><p class="card-text">Number of spectra: 10607
-</p><p class="card-text">Last update: 2025-04-10, 15:51</p>
+<p class="card-text">Number of stars: 117
+</p><p class="card-text">Number of spectra: 10616
+</p><p class="card-text">Last update: 2025-04-12, 06:46</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -326,10 +326,10 @@
       <td><a href="bxmon.html">BX Mon</a></td>
       <td>07 25 22.76</td>
       <td>-03 35 50.64</td>
-      <td>167</td>
+      <td>172</td>
       <td>2011-04-04</td>
-      <td>2025-04-09</td>
-      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2025-04-09 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>2025-04-11</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2025-04-11 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
       <td>30</td>
       <td>2</td>
       <td>2</td>
@@ -830,10 +830,10 @@
       <td><a href="rxpup.html">RX Pup</a></td>
       <td>08 14 12.30</td>
       <td>-41 42 29.08</td>
-      <td>1</td>
+      <td>2</td>
       <td>2023-12-03</td>
-      <td>2023-12-03</td>
-      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2023-12-03 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>2025-04-09</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2025-04-09 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
       <td>30</td>
       <td>3</td>
       <td>2</td>
@@ -1274,7 +1274,7 @@
       <td><a href="v417cma.html">V417 CMa</a></td>
       <td>06 59 11.30</td>
       <td>-29 02 05.15</td>
-      <td>4</td>
+      <td>5</td>
       <td>2021-09-16</td>
       <td>2025-04-09</td>
       <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2025-04-09 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
@@ -1521,6 +1521,18 @@
       <td>30</td>
       <td>-</td>
       <td>2</td>
+    </tr>
+    <tr>
+      <td><a href="rxpup.html">RX Pup</a></td>
+      <td>08 14 12.30</td>
+      <td>-41 42 29.08</td>
+      <td>2</td>
+      <td>2023-12-03</td>
+      <td>2025-04-09</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2025-04-09 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>30</td>
+      <td>-</td>
+      <td>1</td>
     </tr>
   </tbody>
 </table><br><br>
