--- a/observing/ListeSySts.html
+++ b/observing/ListeSySts.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<title>Symbiotic Stars List for Observers</title>
+<title>Bright Symbiotic Stars List for Southern Observers</title>
 <style>
     table {
       font-family: arial, sans-serif;
@@ -21,7 +21,7 @@
 
   <body>
     <center>
-    <h1><p class="p2">List of  Symbiotic Stars with photometry</p></h1><table id="itables_5b74cbba_5bf4_46d9_a96a_9feab34e1473" class="display nowrap" data-quarto-disable-processing="true" style="table-layout:auto;width:auto;margin:auto;caption-side:bottom">
+    <h1><p class="p2">List of Symbiotic Stars with photometry</p></h1><br><p align="left">Last update: 2025-04-23</p><br><table id="itables_5b74cbba_5bf4_46d9_a96a_9feab34e1473" class="display nowrap" data-quarto-disable-processing="true" style="table-layout:auto;width:auto;margin:auto;caption-side:bottom">
 <thead>
     <tr style="text-align: right;">
       
@@ -74,7 +74,7 @@ considered as "galactic confirmed".
 <br />
 <br />
 V, B: magnitudes V and B from SIMBAD<br />
-GP,BP: magnitudes from GAIA in the blue and green filters<br />
+GP,BP: magnitudes from GAIA <br />
 Mag is the last measure obtained in AAVSO database in Band V, Visible, CV, TG<br />
 Dlast is the number of days since the last observation in bands V, Visible, CV, TG<br />
 <br />
