--- a/NoteObservers.html
+++ b/NoteObservers.html
@@ -74,8 +74,7 @@
 		  <a href="#" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">LBV (P Cygni)</a>
 		   <a href="#" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">B stars</a><br><br>
 		<a href="#" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Eruptive stars</a>-->
-        <a href="ListeSySts_Brights_North.html" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Bright Symbiotic Stars North</a><br><br>
-		 <a href="ListeSySts_Brights_South.html" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Bright Symbiotic Stars South</a><br><br>
+        <a href="ListeSySts_Brights_North.html" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Symbiotic Stars Photometry</a><br><br>
 <!--		  <a href="novae.html" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Novae</a><br><br>
 		  <a href="dwarf_novae.html" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Dwarf Novae</a><br><br>
 		 <a href="#" class="btn btn-light btn-lg active" role="button" aria-pressed="true">Nova-like Variables</a><br><br>
@@ -103,7 +102,7 @@
 <footer class="page-footer font-small blue">
 
   <!-- Copyright -->
-  <div class="footer-copyright text-center py-3 navbar-dark bg-dark fixed-bottom" style="color:white">© 2022 Copyright: ARAS Group
+  <div class="footer-copyright text-center py-3 navbar-dark bg-dark fixed-bottom" style="color:white">© 2022 Copyright: ARAS Group Contact: francoismathieu.teyssier@gmail.com
   </div>
   <!-- Copyright -->
 
