--- a/index.html
+++ b/index.html
@@ -53,8 +53,14 @@
             <a class="nav-link" href="contact.html">Contact</a>
           <li class="nav-item">
             <a class="nav-link" href="observers.html">Observers</a>
-
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="sites.html">Observers</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="NotesObservers.html">Observing</a>
+          </li>
+
         </ul>
       </div>
     </div>
