--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <a class="nav-link" href="observers.html">Observers</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="sites.html">Observers</a>
+            <a class="nav-link" href="sites.html">Sites</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="NotesObservers.html">Observing</a>
