--- a/NotesObservers.html
+++ b/NotesObservers.html
@@ -66,6 +66,14 @@
       <div class="col-lg-12 text-center">
         <h1 class="mt-5">ARAS Spectral Database</h1>
         <h4>Eruptive Stars</h4><br>
+        <br>
+        <h1 class="mt-5">Notes to observers</h1>
+        <br>
+        <h4>Photometry of Symbiotic Stars</h4><br>
+
+
+
+
 </div>
 <div class="col-lg-12 text-center">
 <!--
