--- a/NoteObservers.html
+++ b/NoteObservers.html
@@ -79,15 +79,16 @@
     </div>
   </div>
 <div class="col-lg-12 texy-center"
-<h3>Suggested targets for the season - May-July 2025</h3>
+<h1>Suggested targets for the season - May-July 2025</h1>
+<br>
 </div>
 <div class="col-lg-12 text-center">
 
 
 		
     <a href="observing/NorthernMap.html" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Targets Northern hemisphere</a><br><br>
-
-
+<br>
+    <a href="observing/SouthernMap.html" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Targets Southern hemisphere</a><br><br>
 
 <!-- Footer --><br><br><br>
 <footer class="page-footer font-small blue">
