--- a/novae.html
+++ b/novae.html
@@ -70,8 +70,8 @@
  <p class="card-text">Details on stars:   <a href="http://asd.gsfc.nasa.gov/Koji.Mukai/novae/novae.html">Koji's List of Recent Galactic Novae</a></p>
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
 <p class="card-text">Number of stars: 72
-</p><p class="card-text">Number of spectra: 4466
-</p><p class="card-text">Last update: 2025-06-17, 18:00</p>
+</p><p class="card-text">Number of spectra: 4468
+</p><p class="card-text">Last update: 2025-06-18, 17:37</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -897,15 +897,15 @@
       <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2025-03-02 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
     </tr>
     <tr>
-      <td>Nova Lup 2025</td>
+      <td><a href="novalup2025.html">Nova Lup 2025</a></td>
       <td>15 08 03.27</td>
       <td>-40 08 29.58</td>
       <td></td>
       <td>ASASSN-25cm</td>
-      <td>0</td>
-      <td>-</td>
-      <td>-</td>
-      <td>-</td>
+      <td>2</td>
+      <td>2025-06-17</td>
+      <td>2025-06-17</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2025-06-17 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
     </tr>
   </tbody>
 </table><br><br>
