--- a/bfcyg.html
+++ b/bfcyg.html
@@ -468,7 +468,7 @@
       <td>2024-07-11</td>
       <td>01:13</td>
       <td>60502.551</td>
-      <td>XDu</td>
+      <td>XDU</td>
       <td>OHP-FR</td>
       <td>600</td>
       <td><svg xmlns="http://www.w3.org/2000/svg" width="5" height="16" fill="#007bff" class="bi bi-square-fill" viewBox="1 0 5 16"><path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2z"/></svg></td>
