--- a/transcient_Vel2025.html
+++ b/transcient_Vel2025.html
@@ -55,7 +55,7 @@
     </div>
   </nav>
 
-<!-- Page Content --><div class="container">  <div class="row">    <div class="col-lg-12 text-center">      <h1 class="mt-5">ARAS Novae Program</h1><br>  <div class="row"><div class="col-sm-6">  <div class="card">    <div class="card-body">      <h5 class="card-title">Nova Sgr 2015</h5>      <p class="card-text">GCVS Name: V5667 Sgr</p><p class="card-text">Discovery Name: PNV J18142514-2554343</p>      <p class="card-text">RA (2000): 18 14 25.15</p>      <p class="card-text">DEC (2000): -25 54 34.7</p>  </div>  </div></div><div class="col-sm-6">
+<!-- Page Content --><div class="container">  <div class="row">    <div class="col-lg-12 text-center">      <h1 class="mt-5">ARAS Novae Program</h1><br>  <div class="row"><div class="col-sm-6">  <div class="card">    <div class="card-body">      <h5 class="card-title">PNV Vel 2025</h5>      <p class="card-text">GCVS Name: VXXXX Vel</p><p class="card-text">Discovery Name: PNV J10251200-5331109</p>      <p class="card-text">RA (2000): 18 14 25.15</p>      <p class="card-text">DEC (2000): -25 54 34.7</p>  </div>  </div></div><div class="col-sm-6">
     <div class="card">
       <div class="card-body">
 
