--- a/transcient_Vel2025.html
+++ b/transcient_Vel2025.html
@@ -94,7 +94,7 @@
       <td>2025-06-26</td>
       <td>10:15</td>
       <td>60852.927</td>
-      <td>PLU</td>
+      <td>PJL</td>
       <td>SPO-AU</td>
       <td>11000</td>
       <td><svg xmlns="http://www.w3.org/2000/svg" width="5" height="16" fill="#007bff" class="bi bi-square-fill" viewBox="1 0 5 16"><path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2z"/></svg></td>
@@ -113,7 +113,7 @@
 <footer class="page-footer font-small blue">
 
   <!-- Copyright -->
-  <div class="footer-copyright text-center py-3 navbar-dark bg-dark" style="color:white">© 2022 Copyright: ARAS Group, Design & Functionality: Jaroslav Merc
+  <div class="footer-copyright text-center py-3 navbar-dark bg-dark" style="color:white">© 2022 Copyright: ARAS Group
   </div>
   <!-- Copyright -->
 
