--- a/raqr.html
+++ b/raqr.html
@@ -95,7 +95,7 @@
 
 <br><style>table {text-align: center;}table thead th {text-align: center;}</style><div class="card text-white bg-dark mb-3">
 <div class="card-body">
-<h5 class="card-title">Eclipse of the hot component</h5>
+<h5 class="card-title">Eclipse of the hot component (ending/ended)</h5>
 <p class="card-text"><p class="card-text">Ongoing campaign</p>
 </div>
 </div>
