--- a/pnvvel2025.html
+++ b/pnvvel2025.html
@@ -89,7 +89,7 @@
 
 <br><style>table {text-align: center;}table thead th {text-align: center;}</style><div class="card text-white bg-dark mb-3">
 <div class="card-body">
-<h5 class="card-title">possible nova - uncertain identification</h5></div>
+<h5 class="card-title">peculiar nova - https://www.astronomerstelegram.org/?read=17256</h5></div>
 </div>
 <br>
 
