--- a/observers.html
+++ b/observers.html
@@ -512,6 +512,13 @@
       <td></td>
       <td></td>
     </tr>
+     <tr>
+      <td>LBE</td>
+      <td>Luca Bertagna</td>
+      <td>Italia</td>
+      <td ></td>
+      <td></td>
+    </tr>
     <tr>
       <td>LES</td>
       <td>Tim Lester</td>
