--- a/observers.html
+++ b/observers.html
@@ -819,22 +819,16 @@
       <td></td>
 
 </tr>
-</tbody>
-</table><!-- <h3>Symbiotic candidates</h3> -->
-  </div>
+
 </div>
+
+
+
 </div>
 
 
 <!-- Footer --><br><br><br>
-<footer class="page-footer font-small blue">
 
-  <!-- Copyright -->
-  <div class="footer-copyright text-center py-3 navbar-dark bg-dark fixed-bottom" style="color:white">© 2021 Copyright: ARAS Group, Design & Functionality: Jaroslav Merc
-  </div>
-  <!-- Copyright -->
-
-</footer>
 <!-- Footer -->
 
   <!-- Bootstrap core JavaScript -->
@@ -854,6 +848,8 @@
   } );
   </script>
 
-</body>
+Essai
 
+</body>
+essai
 </html>
