--- a/symbiotics.html
+++ b/symbiotics.html
@@ -73,8 +73,8 @@
  <p class="card-text">Details on stars:   <a href="http://astronomy.science.upjs.sk/symbiotics/">New Online Database of Symbiotic Variables</a></p>
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
 <p class="card-text">Number of stars: 116
-</p><p class="card-text">Number of spectra: 11168
-</p><p class="card-text">Last update: 2025-10-22, 10:32</p>
+</p><p class="card-text">Number of spectra: 11172
+</p><p class="card-text">Last update: 2025-10-22, 14:26</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -87,7 +87,7 @@
     <div class="card">
       <div class="card-body">
         <h5 class="card-title">Stars of special interest</h5>
-<p class="card-text">Current campaigns: AG Dra, CH Cyg</p>
+<p class="card-text">Current campaigns: CH Cyg</p>
 <p class="card-text">Current surveys: CI Cyg, AG Peg, BF Cyg, AX Per</p>
 <p class="card-text" style="margin-bottom:0.88cm;">Outbursts: CN Cha</p>
 		<br><br>
@@ -146,7 +146,7 @@
       <td><a href="agdra.html">AG Dra</a></td>
       <td>16 01 41.01</td>
       <td>+66 48 10.13</td>
-      <td>899</td>
+      <td>900</td>
       <td>2013-04-03</td>
       <td>2025-10-20</td>
       <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2025-10-20 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
@@ -170,7 +170,7 @@
       <td><a href="arpav.html">AR Pav</a></td>
       <td>18 15 23.88</td>
       <td>-66 04 42.93</td>
-      <td>37</td>
+      <td>38</td>
       <td>2021-08-09</td>
       <td>2025-09-30</td>
       <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2025-09-30 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
@@ -818,7 +818,7 @@
       <td><a href="rwhya.html">RW Hya</a></td>
       <td>13 34 18.13</td>
       <td>-25 22 48.89</td>
-      <td>97</td>
+      <td>98</td>
       <td>2017-06-28</td>
       <td>2025-08-07</td>
       <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2025-08-07 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
@@ -938,7 +938,7 @@
       <td><a href="stha180.html">StHA 180</a></td>
       <td>20 39 20.61</td>
       <td>-05 17 16.33</td>
-      <td>6</td>
+      <td>7</td>
       <td>2019-07-03</td>
       <td>2025-10-20</td>
       <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2025-10-20 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
