--- a/gkper.html
+++ b/gkper.html
@@ -88,15 +88,7 @@
 
 </div>
 
-<br><style>table {text-align: center;}table thead th {text-align: center;}</style><div class="card text-white bg-dark mb-3">
-<div class="card-body">
-<h5 class="card-title">dwarf nova outburst</h5>
-<p class="card-text"><p class="card-text">low and high resolution spectra Daily monitoring of the outburst (about 100 days)</p>
-</div>
-</div>
-<br>
-
-<a href="archives/gkper.zip" class="btn btn-secondary">Download all spectra as *.zip file (0.5 MB)</a>
+<br><style>table {text-align: center;}table thead th {text-align: center;}</style><a href="archives/gkper.zip" class="btn btn-secondary">Download all spectra as *.zip file (0.1 MB)</a>
 <table class="dataframe display" id="table_id">
   <thead>
     <tr style="text-align: right;">
