--- a/observers.html
+++ b/observers.html
@@ -184,7 +184,7 @@
     </tr>
     <tr>
       <td>CDZ</td>
-      <td>David Cujedo</td>
+      <td>David Cejudo</td>
       <td>Spain</td>
       <td ></td>
       <td></td>
